--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>WDD 131 – Dynamic Web Fundamentals -Jacques Kipoy</h1>
+        <h1>WDD 131 – Dynamic Web Fundamentals -Jacques Kipoy L</h1>
 
         <nav>
             <ul class="navigation">
@@ -57,7 +57,7 @@
     </aside>
     <footer >
         <p>&copy;2025 Jacques Kipoy, Kinshasa DRC </p>
-\
+
     </footer>
 </body>
 
